<resources>
    <string name="app_name">P2PGeocaching</string>
    <string name="user_name_prompt">Who are you?</string>
    <string name="user_name_hint">Username</string>
    <string name="user_name_button_text">Submit</string>
    <string name="warning_empty_user_name">Your username cannot be empty.</string>
    <string name="warning_illegal_characters_user_name">Your name may only contain letters, numbers and spaces.</string>
    <string name="welcome_message">Hello %s!</string>
    <string name="empty_list_prompt">Create your own cache or connect to other people to receive their list of caches!</string>
    <string name="change_username_button_text">Change username</string>
    <string name="create_cache_button_text">Create cache</string>
    <string name="connect_button_text">Connect</string>
    <string name="user_name_title">Username</string>
    <string name="transfer_button_text">Transfer</string>
    <string name="connect_prompt">Click on the button to start transferring your caches via bluetooth:</string>
    <string name="cache_name_prompt">Cache name:</string>
    <string name="new_cache_desc_edit_text">Description:</string>
    <string name="new_cache_button_text">Save</string>
    <string name="look_up_cache_detail">Show details of cache</string>
    <string name="own_cache_type_text">This is one of your own caches.</string>
    <string name="unsolved_cache_type_text">This is an unsolved cache.</string>
    <string name="solved_cache_type_text">You have solved this cache!</string>
    <string name="private_key_button_text">Show private key</string>
    <string name="solve_button_text">Solve Cache</string>
    <string name="hall_of_fame_title_text">Hall of Fame:</string>
    <string name="solved_cache_title">Solved Cache</string>
    <string name="unsolved_cache_title">Unsolved Cache</string>
    <string name="own_cache_title">Own Cache</string>
    <string name="creator_text">Creator: %s</string>
    <string name="private_key_title">Private Key</string>
    <string name="private_key_headline">Private Key:\n%s</string>
    <string name="private_key_hint_text">You should hide this key in your cache so other people can solve it.</string>
    <string name="solve_prompt">Private Key:</string>
    <string name="submit_private_key_button_text">Submit</string>
    <string name="solve_title">Solve cache</string>
    <string name="new_cache_error">Error: one of the fields contains illegal characters\nThe following are illegal characters: \'{\', \'}\', \';\'.</string>
    <string name="solve_cache_error">Error: entered key does not match public key.</string>
    <string name="illegal_key_error">This is not a valid key.</string>
    <string name="delete_cache_prompt">Delete Cache</string>
    <string name="own_tag">[Own]</string>
    <string name="solved_tag">[Solved]</string>
    <string name="unsolved_tag">[Unsolved]</string>
    <string name="publisher_name_prompt">Publisher name:</string>
    <string name="pub_key_edit_text">Enter last 4 digits of public key:</string>
    <string name="new_feed_button_text">Save</string>
    <string name="delete_feed_prompt">Unsubscribe from Feed</string>
    <string name="modify_feeds_text">Manage Feeds</string>
    <string name="empty_feed_list_prompt">Subscribe to a feed to see them here!</string>
    <string name="add_feed_button_text">Add Feed</string>
    <string name="feeds_title">Manage Feeds</string>
    <string name="feedDetailTitle">Feed</string>
    <string name="salt_message">Salt: %s</string>
    <string name="user_name_message">User name: %s</string>
    <string name="feed_name_message">Feed: %s</string>
    <string name="discoverable">Discoverable</string>
    <string name="close">close</string>
    <string name="Sender">Sender</string>

</resources>